<resources>
    <string name="app_name">Adda</string>

    <string name="hey_welcome">Hey! Welcome</string>
    <string name="welcome_message">discover and share stories, thinking, and expertise on any topic</string>
    <string name="get_started">Get Started</string>
    <string name="i_already_have_an_account">Have an account</string>
    <string name="already_have_an_account">I already have an account!</string>
    <string name="landing_image">landing image</string>
    <string name="app_logo">app logo</string>
    <string name="later">Later</string>
    <string name="create_an_account">Create an account</string>
    <string name="signup_instruction">Please set your name,email and password to create a new account</string>
    <string name="login_instruction">Please enter your email and password to login to your account</string>
    <string name="update_instruction">Please use valid information to authenticate your identity</string>
    <string name="name">Enter your name</string>
    <string name="name_error">Enter at least 3 digit name </string>
    <string name="password_hint">Enter at least 5 digit password</string>
    <string name="login_password_hint">Enter your password</string>
    <string name="password_required">Password is not valid</string>
    <string name="email_required">Email is not valid</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Log in</string>
    <string name="email_hint">Enter a valid email</string>
    <string name="login_email_hint">Enter your email</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="signin_to_qissa">Login to Qissa</string>
    <string name="don_t_have_an_account">I don\'t have an account!</string>
    <string name="forget_password">Forget password?</string>
    <string name="indicator">TODO</string>
    <string name="account_amp_settings">Account &amp; Settings</string>
    <string name="hasib_rajin">Hasib Rajin</string>
    <string name="email">hasibrajin@gmail.com</string>
    <string name="seemore">See more</string>
    <string name="stories">Stories</string>
    <string name="notification">Notifications</string>
    <string name="account">ACCOUNT</string>
    <string name="profile">Profile</string>
    <string name="chat">Masseging</string>
    <string name="followers">Followers</string>
    <string name="saved">Saved</string>
    <string name="laguage">Language</string>
    <string name="help">Help</string>
    <string name="policies">Policies</string>
    <string name="more">MORE</string>
    <string name="rate">Rate_us</string>
    <string name="share_with">Share with others</string>
    <string name="logout">Log 0ut</string>
    <string name="version">Version 1.0.1.1</string>
    <string name="topics">Topics</string>
    <string name="qissa">Qissa</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="alert">Alert</string>
    <string name="chats">Chats</string>
    <string name="books">Books</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="write_a_story_thinking_etc">Share a story, thinking or expertise…</string>
    <string name="post_time">10 pm</string>
    <string name="post_details">গল্পটির মূল চরিত্র হলো তেরো-চৌদ্দ বছরের এক উদ্দাম কিশোর ফটিক চক্রবর্তী। গ্রামের বালকদের নিকট ফটিক সরদার স্বরূপ। ছিপ ঘুড়ি লাটাই নিয়ে গ্রামের পথে ঘাটে ‘তাইরে নাইরে নাইরে না’ করে ঘুড়ে বেড়ানো, পড়ায় ফাঁকি দেয়া ইত্যাদি কাজেই সে সারাদিন ব্যস্ত থাকতো, যা একজন তেরো-চৌদ্দ বছরের কিশোর বালকের সাধারণ স্বভাবের মাঝেই পড়ে বলা যায়। ফটিকের ছোট ভাই মাখন। গল্পের শুরুতেই আমরা দুই ভাইয়ের মাঝে এক প্রকার দ্বন্দ্ব দেখতে পাই। ফটিক অন্যান্য বালকদের শালকাঠের গুড়ি গড়িয়ে নিয়ে যাবার প্রস্তাব দেয়। অন্যান্য বালকরা প্রস্তাবে সায় দিলেও বাধসাধে ফটিকের ছোটভাই মাখনলাল। ফটিকের নিষেধ শুনার পরেও সে খেলায় বিঘ্ন ঘটাতে অকাল গাম্ভীর্য নিয়ে শালকাঠের উপর বসে থাকে। অবশ্য সে এর ফলও ভোগ করে যখন ফটিক ও তার বন্ধুরা মাখনকে সহই শালকাঠের গুড়ি গড়াতে শুরু করে। ফলশ্রুতিতে মাখন ঝাঁপিয়ে পড়ে ফটিকের উপর।</string>
    <string name="likes">1100 likes</string>
    <string name="comments_count">550 comments</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="write">Create</string>
    <string name="no_data_found">No data found</string>

    <string name="total_likes">Hello, %1$s! You have %2$d new messages.</string>
    <string name="_0">0</string>
    <string name="what_are_your_thoughts">What are your thoughts?</string>
    <string name="reply">Reply</string>
    <string name="post">Add</string>
    <string name="loading">please,wait...</string>
    <string name="content">content</string>
    <string name="about">Account Info</string>
    <string name="add_your_name">add your name</string>
    <string name="add_your_email">add your email</string>
    <string name="add_your_mobile_number">add your mobile number</string>
    <string name="add_your_birth">add your date of birth</string>
    <string name="add_your_gender">add your gender</string>
    <string name="add_our_qualification">add your qualification</string>
    <string name="add_your_address">add your address</string>
    <string name="personal_info">Personal Info</string>
    <string name="change_password">Change Password</string>
    <string name="camera">Camera</string>
    <string name="library">Library</string>
    <string name="follow">Follow</string>
    <string name="favorite">Favorite</string>
    <string name="block">Block</string>
    <string name="update_profile">Update Profile</string>
    <string name="na">N/A</string>
    <string name="see_the_list_of_followers">See the list of followers</string>
    <string name="user_relation">User Relation</string>
    <string name="search_by_name">Search by name...</string>
    <string name="following">Following</string>
    <string name="see_who_follows_you">See who follows you</string>
    <string name="follower">Follower</string>
    <string name="my_stories">My Stories</string>
    <string name="search_by_title">Search by title...</string>
    <string name="see_your_post">Find your stories</string>
    <string name="all">All</string>
    <string name="update_user">Update user data</string>
    <string name="update_personal">Update personal data</string>
    <string name="update">Update</string>
    <string name="update_profile_info">Want to update profile data!</string>
    <string name="update_user_info">Want to update user data!</string>
    <string name="enter_phone">Enter mobile number</string>
    <string name="male">male</string>
    <string name="gender">Gender</string>
    <string name="female">female</string>
    <string name="others">others</string>
    <string name="create_story">Write Story</string>
    <string name="add_title">Add title to your story</string>
    <string name="add_image">Add image</string>
    <string name="title_activity_maps">MapsActivity</string>


    <string name="facebook_app_id">379731760950766</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">62c6376349db66389d7875f5b533724f</string>
    <string name="edit">Edit stories</string>
    <string name="delete">Delete stories</string>
    <string name="save_post">Save stories</string>
    <string name="report">Report stories</string>
    <string name="search">Search</string>
    <string name="search_here">Search here...</string>
    <string name="qa">Q/A</string>
    <string name="search_qs">Search Question</string>


</resources>