<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_follow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin_l"
        android:background="@color/white"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/count_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_l"
            android:layout_marginStart="@dimen/margin_l"
            android:text="01"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/blue_100_10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/content" />


        <ImageView
            android:id="@+id/profile_image_view"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="@dimen/margin_l"
            android:layout_marginStart="@dimen/margin_l"
            android:src="@drawable/ic_circle_icons_profile"
            app:layout_constraintStart_toEndOf="@+id/count_text_view"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/content" />


        <TextView
            android:id="@+id/tv_user_profile_name_ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:singleLine="true"
            android:hint="@string/add_your_name"
            android:textColorHint="@color/blue_100"
            android:textColor="@color/blue_100"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/profile_image_view"
            app:layout_constraintTop_toTopOf="@id/profile_image_view"
            app:layout_constraintBottom_toBottomOf="@+id/profile_image_view" />


        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_d"
            android:paddingStart="1dp"
            android:paddingEnd="@dimen/margin_z"
            android:hint="@string/add_your_email"
            android:textColor="@color/blue_100_60"
            android:textColorHint="@color/blue_100"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/profile_image_view"
            app:layout_constraintTop_toBottomOf="@id/tv_user_profile_name_ID" />

        <TextView
            android:id="@+id/textView_follower_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingStart="1dp"
            android:paddingEnd="@dimen/margin_z"
            android:text="@string/followers"
            android:textAllCaps="false"
            android:textColor="@color/blue_100_40"
            android:textSize="13sp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="@+id/tv_email"
            app:layout_constraintTop_toBottomOf="@id/tv_email" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>