<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:id="@+id/nested_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_baby_200">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:paddingBottom="@dimen/margin_d"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/cancel_image_view"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="5dp"
                    android:layout_marginTop="@dimen/margin_m"
                    android:layout_marginStart="@dimen/margin_m"
                    android:src="@drawable/ic_cancel_circle"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:contentDescription="@string/content" />

                <ImageView
                    android:id="@+id/profile_image_view"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="55dp"
                    android:layout_marginEnd="@dimen/margin_xl"
                    android:padding="@dimen/margin_m"
                    android:background="@drawable/button_blue"
                    android:src="@drawable/ic_profile_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/add_profile_image_view"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_add"
                    android:layout_marginBottom="2.5dp"
                    android:layout_marginEnd="2dp"
                    app:layout_constraintBottom_toBottomOf="@id/profile_image_view"
                    app:layout_constraintEnd_toEndOf="@+id/profile_image_view" />


                <TextView
                    android:id="@+id/tv_user_profile_name_ID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:layout_marginTop="@dimen/margin_xl"
                    android:layout_marginStart="22dp"
                    android:text="@string/hasib_rajin"
                    android:textColor="@color/blue_900"
                    android:textSize="27sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/cancel_image_view"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tv_user_follower_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:layout_marginStart="22dp"
                    android:text="500 follower"
                    android:textSize="16sp"
                    android:textColor="@color/white_700"
                    app:layout_constraintTop_toBottomOf="@+id/tv_user_profile_name_ID"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tv_user_post"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="@dimen/margin_m"
                    android:layout_marginTop="@dimen/margin_l"
                    android:background="@drawable/textview_background"
                    android:gravity="center"
                    android:paddingTop="@dimen/margin_d"
                    android:text="@string/stories"
                    android:textAlignment="gravity"
                    android:textColor="@color/blue_100"
                    android:textSize="@dimen/margin_l"
                    app:drawableTopCompat="@drawable/ic_stories"
                    app:layout_constraintEnd_toStartOf="@+id/tv_user_follower"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_user_follower_count" />


                <TextView
                    android:id="@+id/tv_user_follower"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="@dimen/margin_d"
                    android:background="@drawable/textview_background"
                    android:gravity="center"
                    android:paddingTop="@dimen/margin_d"
                    android:text="@string/followers"
                    android:textAlignment="gravity"
                    android:textColor="@color/blue_100"
                    android:textSize="@dimen/margin_l"
                    app:drawableTopCompat="@drawable/ic_follower"
                    app:layout_constraintStart_toEndOf="@id/tv_user_post"
                    app:layout_constraintEnd_toStartOf="@+id/tv_user_saved"
                    app:layout_constraintTop_toTopOf="@+id/tv_user_post" />

                <TextView
                    android:id="@+id/tv_user_saved"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_marginEnd="@dimen/margin_m"
                    android:layout_marginStart="@dimen/margin_d"
                    android:background="@drawable/textview_background"
                    android:gravity="center"
                    android:paddingTop="@dimen/margin_d"
                    android:text="@string/saved"
                    android:textAlignment="gravity"
                    android:textColor="@color/blue_100"
                    android:textSize="@dimen/margin_l"
                    app:drawableTopCompat="@drawable/ic_bookmark"
                    app:layout_constraintStart_toEndOf="@id/tv_user_follower"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_user_follower" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_account_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_s"
                android:paddingBottom="@dimen/margin_m"
                android:background="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/container_profile">

                <TextView
                    android:id="@+id/about_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_m"
                    android:layout_marginTop="@dimen/margin_m"
                    android:text="@string/about"
                    android:textAllCaps="true"
                    android:textColor="@color/blue_100"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/edit_image_view"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="@dimen/margin_m"
                    android:contentDescription="@string/content"
                    android:padding="6dp"
                    android:src="@drawable/ic_edit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="@dimen/margin_m"
                    android:layout_marginTop="@dimen/margin_m"
                    android:drawablePadding="18dp"
                    android:singleLine="true"
                    android:text="@string/add_your_name"
                    android:textColor="@color/blue_900"
                    android:textSize="18sp"
                    app:drawableLeftCompat="@drawable/ic_user_name_black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/about_textview" />

                <TextView
                    android:id="@+id/tv_user_email"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="@dimen/margin_m"
                    android:layout_marginTop="5dp"
                    android:drawablePadding="14dp"
                    android:text="@string/add_your_email"
                    android:textColor="@color/blue_900"
                    android:textSize="18sp"
                    app:drawableLeftCompat="@drawable/ic_user_email_black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_user_name" />

                <TextView
                    android:id="@+id/tv_user_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="@dimen/margin_m"
                    android:layout_marginTop="5dp"
                    android:drawablePadding="@dimen/margin_m"
                    android:text="@string/add_your_mobile_number"
                    android:textColor="@color/blue_900"
                    android:textSize="18sp"
                    app:drawableLeftCompat="@drawable/ic_mobile"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_user_email" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_personal_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:paddingBottom="@dimen/margin_m"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/container_account_info">

                <TextView
                    android:id="@+id/personal_info_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textSize="18sp"
                    android:layout_marginTop="@dimen/margin_m"
                    android:layout_marginStart="@dimen/margin_m"
                    android:textAllCaps="true"
                    android:text="@string/personal_info"
                    android:textStyle="bold"
                    android:textColor="@color/blue_100"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/edit_image_view_2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="6dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="@dimen/margin_m"
                    android:src="@drawable/ic_edit"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:contentDescription="@string/content" />


                <TextView
                    android:id="@+id/tv_user_birth"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:drawablePadding="@dimen/margin_m"
                    android:layout_marginTop="@dimen/margin_m"
                    android:layout_marginStart="17dp"
                    android:text="@string/add_your_birth"
                    android:textColor="@color/blue_900"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@+id/personal_info_textview"
                    app:layout_constraintStart_toStartOf="parent"
                    app:drawableLeftCompat="@drawable/ic_birth" />

                <TextView
                    android:id="@+id/tv_user_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:singleLine="true"
                    android:layout_marginTop="5dp"
                    android:drawablePadding="@dimen/margin_m"
                    android:layout_marginStart="@dimen/margin_m"
                    android:text="@string/add_your_gender"
                    android:textColor="@color/blue_900"
                    android:textSize="18sp"
                    app:drawableLeftCompat="@drawable/ic_gender"
                    app:layout_constraintTop_toBottomOf="@+id/tv_user_birth"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tv_user_education"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:singleLine="true"
                    android:layout_marginTop="5dp"
                    android:drawablePadding="@dimen/margin_m"
                    android:layout_marginStart="@dimen/margin_m"
                    android:text="@string/add_our_qualification"
                    android:textColor="@color/blue_900"
                    android:textSize="18sp"
                    app:drawableLeftCompat="@drawable/ic_job"
                    app:layout_constraintTop_toBottomOf="@+id/tv_user_gender"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tv_user_address"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:drawablePadding="@dimen/margin_d"
                    android:layout_marginStart="12dp"
                    android:text="@string/add_your_address"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/blue_900"
                    android:textSize="18sp"
                    app:drawableLeftCompat="@drawable/ic_address"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_user_education" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>