<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/margin_m">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_bottom_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_weight="0.2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_bottom_indicator" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_d"
                android:layout_marginStart="@dimen/margin_m"
                android:text="@string/update_profile"
                android:textColor="@color/white_300"
                android:textSize="17sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/blue_baby_200"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />

            <TextView
                android:id="@+id/takephotoTVID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="?attr/selectableItemBackground"
                android:drawablePadding="16dp"
                android:textStyle="bold"
                android:text="@string/camera"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:drawableLeftCompat="@drawable/ic_camera" />

            <TextView
                android:id="@+id/selectagalaryID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="?attr/selectableItemBackground"
                android:drawablePadding="@dimen/margin_m"
                android:textStyle="bold"
                android:text="@string/library"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:drawableLeftCompat="@drawable/ic_library" />

        </LinearLayout>


    </LinearLayout>

</layout>

